feat: Fix compilation of plugin.